Replace deprecated URL constructor and manual hex-format loop
new URL(String) is deprecated; use URI.create(...).toURL() instead.
Replace the per-byte String.format("%02x", b) hex loop in
computeContentHash with a direct nibble-lookup encoder.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>